--- a/index-splash-video.html
+++ b/index-splash-video.html
@@ -4,10 +4,27 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>DATAVIZ</title>
+  <style type="text/css"> 
+  #video-background {
+position:absolute;
+right: 0;
+bottom: 0;
+min-width: 100%;
+min-height: 100%;
+width: 100%;
+height: 100%;
+z-index: -1000;
+overflow: hidden;
+-webkit-filter: brightness(.2);
+filter: brightness(.2);
+</style>
   <link rel="stylesheet" href="css/splash.css">
 </head>
+
 <body>
-   
+     <iframe id="video-background"
+src="https://www.youtube.com/embed/F9Bo89m2f6g?autoplay=1&controls=0&showinfo=0&loop=1&playlist=E24It8TLwGY&autohide=1&enablejsapi=1">
+</iframe>
 <div style="text-align:center;padding:150px 0;">
 
   
