--- a/index-splash.html
+++ b/index-splash.html
@@ -4,40 +4,22 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>DATAVIZ</title>
-  <link rel="stylesheet" href="css/splash.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
-   
 <div style="text-align:center;padding:150px 0;">
-
   
-	<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 17.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-<svg version="1.1" id="hi-there" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="534px" height="240px" viewBox="235.5 136.5 534 240" enable-background="new 235.5 136.5 534 240" xml:space="preserve">
+<svg version="1.1" class="strokedev strokedes" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="960px" height="560px" viewBox="0 0 960 560" enable-background="new 0 0 960 560" xml:space="preserve">
 <rect x="246.5" y="144.5" fill="#FFFFFF" stroke="#000000" stroke-width="7" stroke-miterlimit="10" width="516" height="222"/>
 <text transform="matrix(1 0 0 1 343.7979 255.5)" font-family="'MyriadPro-Regular'" font-size="48">DATAVIZ SERIES</text>
 <line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="349" y1="281.5" x2="660" y2="281.5"/>
-</svg> 
-<div>
-	<a href="#" class="button">Learn About Us</a>
+</svg>
+
+
+  
 </div>
- 	
-  </div>
 
 
-
-
- <script type="text/javascript" src="js/vivus.js"></script>
- <script>
-var hi = new Vivus('hi-there', {type: 'scenario-sync', duration: 110, start: 'autostart', dashGap: 0, forceRender: false},
-				function () {
-					if (window.console) {
-						console.log('Animation finished. [log triggered from callback]');
-					}
-				});
-</script>
-				
 </body>
 </html>
