mise a jour graphic /scss
mise a jour de lionel

--- a/index-splash.html
+++ b/index-splash.html
@@ -11,17 +11,21 @@
 <div style="text-align:center;padding:150px 0;">
 
   
-	<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 17.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
 <svg version="1.1" id="hi-there" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="534px" height="240px" viewBox="235.5 136.5 534 240" enable-background="new 235.5 136.5 534 240" xml:space="preserve">
-<rect x="246.5" y="144.5" fill="#FFFFFF" stroke="#000000" stroke-width="7" stroke-miterlimit="10" width="516" height="222"/>
-<text transform="matrix(1 0 0 1 343.7979 255.5)" font-family="'MyriadPro-Regular'" font-size="48">DATAVIZ SERIES</text>
-<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="349" y1="281.5" x2="660" y2="281.5"/>
-</svg> 
-<div>
-	<a href="#" class="button">Learn About Us</a>
+<rect x="244.5" y="141.5" fill="none" stroke="#FFFFFF" stroke-width="7" stroke-miterlimit="10" width="516" height="222"/>
+<text transform="matrix(1 0 0 1 353.7979 271.5)" enable-background="new    "><tspan x="0" y="0" fill="#ED0C0C" font-family="'MyriadPro-Regular'" font-size="48">DATAVIZ </tspan><tspan x="189.55" y="0" fill="#FCFCFC" font-family="'MyriadPro-Regular'" font-size="48">SERIES</tspan></text>
+<path stroke="#F9F9F9" stroke-width="3" stroke-miterlimit="10" d="M671.798,538.5"/>
+<path stroke="#F9F9F9" stroke-width="3" stroke-miterlimit="10" d="M360.798,538.5"/>
+<rect x="293.798" y="212.5" fill="none" stroke="#F9F9F9" stroke-width="3" stroke-miterlimit="10" width="417.404" height="80"/>
+</svg>
+
+
+<div class="button-space">
+	<a href="#" class="button">Start this Experience</a>
 </div>
  	
   </div>
@@ -31,10 +35,10 @@
 
  <script type="text/javascript" src="js/vivus.js"></script>
  <script>
-var hi = new Vivus('hi-there', {type: 'scenario-sync', duration: 110, start: 'autostart', dashGap: 0, forceRender: false},
+var hi = new Vivus('hi-there', {type: 'async', duration: 110, start: 'autostart', dashGap: 0, forceRender: true},
 				function () {
 					if (window.console) {
-						console.log('Animation finished. [log triggered from callback]');
+						console.log('Animation a fini cousin check le javscript');
 					}
 				});
 </script>
